Release 8.21   Advanced search by taxonomic name as (for example): ("myrmicinaepheidole megatron", "amblyoponinaemystrium mysticum")